solved footer overlapping in projects

--- a/src/components/pages/projectDetail/projectDetails.css
+++ b/src/components/pages/projectDetail/projectDetails.css
@@ -1,7 +1,7 @@
 #mainImg{
-  max-height: 70vh;
+  max-height: 75vh;
 }
 
 .projectImg{
-  width: 100%;
+  height: 100%;
 }
